# kobuki_ros

kobuki_auto_docking/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_auto_docking/config/: auto_docking.yaml  kobuki_node_params.yaml
kobuki_auto_docking/include/kobuki_auto_docking/: auto_docking_ros.hpp
kobuki_auto_docking/launch/: compact.launch.py
kobuki_auto_docking/scripts/: activate.sh
kobuki_auto_docking/src/: auto_docking_ros.cpp
kobuki_bumper2pc/: CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_bumper2pc/config/: kobuki_bumper2pc_params.yaml
kobuki_bumper2pc/include/kobuki_bumper2pc/: kobuki_bumper2pc.hpp
kobuki_bumper2pc/launch/: kobuki_bumper2pc-launch.py
kobuki_bumper2pc/src/: kobuki_bumper2pc.cpp  kobuki_bumper2pc_node.cpp
kobuki_controller_tutorial/: .cproject  package.xml
kobuki_description/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_description/launch/: kobuki_astra_description.launch.py  kobuki_description.launch.py  kobuki_rplidar.launch.py  kobuki_xtion_description.launch.py  robot_description.launch.py  spawn.launch.py
kobuki_description/meshes/sensors/: rplidar.dae
kobuki_description/rviz/: model.rviz
kobuki_description/urdf/: asus_xtion_pro_offset.urdf.xacro  hexagons.urdf.xacro  kobuki.urdf  kobuki.urdf.xacro  kobuki_astra.urdf  kobuki_gazebo.urdf  kobuki_gazebo.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_sim.urdf.xacro  kobuki_standalone.urdf.xacro  kobuki_xtion.urdf  turtlebot_common_library.urdf.xacro
kobuki_description/urdf/sensors/: astra.urdf.xacro  asus_xtion_pro.urdf.xacro  asus_xtion_pro_offset.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro
kobuki_description/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
kobuki_keyop/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_keyop/config/: keyop_params.yaml
kobuki_keyop/include/kobuki_keyop/: keyop.hpp
kobuki_keyop/src/: keyop.cpp  keyop_node.cpp
kobuki_node/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_node/config/: kobuki_node_params.yaml
kobuki_node/include/kobuki_node/: diagnostics.hpp  kobuki_ros.hpp  odometry.hpp
kobuki_node/launch/: kobuki_node-composed-launch.py  kobuki_node-launch.py
kobuki_node/src/: diagnostics.cpp  kobuki_ros.cpp  kobuki_ros_node.cpp  odometry.cpp
kobuki_random_walker/: .cproject  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_random_walker/include/kobuki_random_walker/: random_walker.hpp
kobuki_random_walker/src/: random_walker.cpp  random_walker_node.cpp
kobuki_ros/: .cproject  .project  CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_safety_controller/: CHANGELOG.rst  CMakeLists.txt  package.xml
kobuki_safety_controller/config/: safety_controller_params.yaml
kobuki_safety_controller/include/kobuki_safety_controller/: safety_controller.hpp
kobuki_safety_controller/launch/: safety_controller-composed-launch.py  safety_controller-launch.py
kobuki_safety_controller/src/: safety_controller.cpp  safety_controller_node.cpp
kobuki_testsuite/: .cproject  package.xml
