<package format="2">
  <name>kobuki_bumper2pc</name>
  <version>1.0.0</version>
  <description>
    Bumper/cliff to pointcloud nodelet:
    Publish bumpers and cliff sensors events as points in a pointcloud, so navistack can use them
    for poor-man navigation. Implemented as a nodelet intended to run together with kobuki_node.
  </description>
  <author email="jorge@yujinrobot.com">Jorge Santos Simon</author>
  <maintainer email="jorge@yujinrobot.com">Jorge Santos Simon</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
  <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
  <url type="website">http://ros.org/wiki/kobuki_bumper2pc</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>rcl_interfaces</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>

  <depend>kobuki_ros_interfaces</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
