<package format="2">
  <name>kobuki_keyop</name>
  <version>1.0.0</version>
  <description>
    Keyboard teleoperation for Kobuki: relays commands from a keyboard to Kobuki.
  </description>
  <author email="d.stonier@gmail.com">Daniel Stonier</author>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <license>BSD</license>
  <url type="bugtracker">https://github.com/kobuki-base/kobuki_ros/issues</url>
  <url type="repository">https://github.com/kobuki-base/kobuki_ros</url>
  <url type="website">https://index.ros.org/p/kobuki_keyop/github-kobuki-base-kobuki_ros</url>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <!-- Ros -->
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>

  <!-- Ecl -->
  <build_depend>ecl_build</build_depend>

  <!-- Kobuki -->
  <build_depend>kobuki_ros_interfaces</build_depend>


  <!-- Ros -->
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>

  <!-- Kobuki -->
  <exec_depend>kobuki_ros_interfaces</exec_depend>
  <exec_depend>kobuki_velocity_smoother</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
